test/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
out/third_party/testsuite/func.wast:274: assert_invalid passed:
  000001a: error: invalid function signature index: 2
out/third_party/testsuite/func.wast:358: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001d: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:362: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001c: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:366: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001e: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:374: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:378: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001b: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:382: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001c: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:390: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:394: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:403: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:407: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:411: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:415: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:420: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:426: assert_invalid passed:
  error: type stack at end of function is 1, expected 0
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:432: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got f32.
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:439: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:445: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:451: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:458: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:464: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:470: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:476: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:483: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:489: assert_invalid passed:
  error: type mismatch in br, expected i32 but got f32.
  000001f: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:495: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:501: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:507: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:514: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:520: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001d: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:526: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:536: assert_malformed passed:
  out/third_party/testsuite/func/func.34.wast:1:14: error: unexpected token "local", expected an instr.
  (func (nop) (local i32))
               ^^^^^
out/third_party/testsuite/func.wast:540: assert_malformed passed:
  out/third_party/testsuite/func/func.35.wast:1:14: error: unexpected token "param", expected an instr.
  (func (nop) (param i32))
               ^^^^^
out/third_party/testsuite/func.wast:544: assert_malformed passed:
  out/third_party/testsuite/func/func.36.wast:1:14: error: unexpected token "result", expected an instr.
  (func (nop) (result i32))
               ^^^^^^
out/third_party/testsuite/func.wast:548: assert_malformed passed:
  out/third_party/testsuite/func/func.37.wast:1:20: error: unexpected token "param", expected an instr.
  (func (local i32) (param i32))
                     ^^^^^
out/third_party/testsuite/func.wast:552: assert_malformed passed:
  out/third_party/testsuite/func/func.38.wast:1:20: error: unexpected token "result", expected an instr.
  (func (local i32) (result i32) (get_local 0))
                     ^^^^^^
out/third_party/testsuite/func.wast:556: assert_malformed passed:
  out/third_party/testsuite/func/func.39.wast:1:21: error: unexpected token "param", expected an instr.
  (func (result i32) (param i32) (get_local 0))
                      ^^^^^
103/103 tests passed.
;;; STDOUT ;;)
